fix: too big landing screen font on bigger screens

--- a/src/assets/css/about_me/aboutme.css
+++ b/src/assets/css/about_me/aboutme.css
@@ -1,6 +1,6 @@
 .about_me {
     padding: 90px 80px;
-    height: 100vh;
+    height: 70vh;
     background: var(--black);
 }
 
