--- a/src/assets/css/media.css
+++ b/src/assets/css/media.css
@@ -19,12 +19,6 @@
     }
 }
 
-@media only screen and (max-width: 1008px) {
-    .about_me {
-        height: 120vh !important;
-    }
-}
-
 @media only screen and (max-width: 909px) {
     .about_me_left {
         padding: 0 50px 0 10px !important;
@@ -56,10 +50,6 @@
 }
 
 @media only screen and (max-width: 678px) {
-    .about_me {
-        height: 150vh !important;
-    }
-
     .about_me_left {
         width: 100% !important;
         padding: 0 0 0 0 !important;
